--- a/index.html
+++ b/index.html
@@ -3,78 +3,94 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Diary</title>
+    <title>Journal</title>
 </head>
 <body>
     <h1>A Diary of a Self-Taught Software/Web Developer</h1>
-    <h2>Entry #1: Sept 1st, 2024</h2>
-    <p> Today, when I got home, I collapsed onto the couch, reflecting on the work I do 
-        and the satisfaction it brings—or rather, <strong><i>the things it takes away</i></strong>. 
-        I couldn’t <b><em>shake</em></b> the frustration of missing out on my software and web development projects—some 
-        <strong><i>I had promised</i></strong>, others were personal hobbies I had hoped to explore. 
-        In that moment, I thought, <strong><i>enough is enough</i></strong>. It was time for a change. 
-        That very day, while browsing the web for affordable resources, 
-        I stumbled upon The Odin Project, reigniting the spark of my passion.
-    </p>
-    <h2>Entry #2: Sept 2nd, 2024</h2>
-    <p> Even after sleeping on yesterday's idea, the burning desire for change didn’t fade.
-        <em><b>So</b></em>, I grabbed a pen and started listing the pros and cons of my current job, mapping out the journey ahead.
-        After much mental back-and-forth, I finally took the plunge and enrolled in The Odin Project.
-        <em><b>With excitement coursing through me</b></em>, I opened the course, 
-        ready to dive in—only to realize, unfortunately, that I had to head off to work.
-    </p>
-    <h2>Entry #3: Sept 3rd, 2024</h2>
-    <p> <em><b>At last</b></em>, the moment I’d been waiting for arrived—I finally opened the course. 
-        The first few topics might have seemed basic to some: an introduction to computers, 
-        how the internet really works, and the distinction between a website and a webpage. 
-        Each concept felt like a key unlocking the doors to a new realm of possibilities. 
-        I could feel my excitement building with every line I <b><em>read</em></b>.
-    </p>
-    <p> <b><em>It wasn’t just about learning the basics</em></b>—it was about the thrill of stepping 
-        into a world I had always dreamed of. With every click, 
-        I was laying the groundwork for something bigger, 
-        something more meaningful. <strong><i>This wasn’t just a course</i></strong>; it was the beginning of a 
-        transformative journey. I felt an overwhelming sense of pride—I had finally taken the 
-        first step into web and software development, a passion I had long <b><em>neglected</em></b>. 
-        The road ahead felt unknown, yet thrilling, and I couldn’t wait to see where this adventure 
-        would lead me.
-    </p>
-    <h2>Entry #4: Sept 4th, 2024</h2>
-    <p> <strong><i>Today was a breakthrough</i></strong>—I successfully installed a virtual machine on my laptop! 
-        But that wasn’t all. I went ahead and installed a Linux system on it as well. 
-        The moment it booted up, <b><em>I couldn’t help but feel a surge of excitement</em></b> . 
-        I was about to use an entirely different operating system, all while keeping my Windows setup 
-        intact! It felt like I had unlocked a whole new dimension on my machine, 
-        a playground for exploration and learning.
-    </p>
+    <ol>
+        <li> <b> Sept 1st, 2024 </b> </li>
+        <p> Today, when I got home, I collapsed onto the couch, reflecting on the work I do 
+            and the satisfaction it brings—or rather, <strong><i>the things it takes away</i></strong>. 
+            I couldn’t <b><em>shake</em></b> the frustration of missing out on my software and web development projects—some 
+            <strong><i>I had promised</i></strong>, others were personal hobbies I had hoped to explore. 
+            In that moment, I thought, <strong><i>enough is enough</i></strong>. It was time for a change. 
+            That very day, while browsing the web for affordable resources, 
+            I stumbled upon The Odin Project, reigniting the spark of my passion.
+        </p>
+        <li> <b> Sept 2nd, 2024 </b></li>
+        <p> Even after sleeping on yesterday's idea, the burning desire for change didn’t fade.
+            <em><b>So</b></em>, I grabbed a pen and started listing the pros and cons of my current job, mapping out the journey ahead.
+            After much mental back-and-forth, I finally took the plunge and enrolled in The Odin Project.
+            <em><b>With excitement coursing through me</b></em>, I opened the course, 
+            ready to dive in—only to realize, unfortunately, that I had to head off to work.
+        </p>
+        <li> <b> Sept 3rd, 2024 </b></li>
+        <p> <em><b>At last</b></em>, the moment I’d been waiting for arrived—I finally opened the course. 
+            The first few topics might have seemed basic to some: an introduction to computers, 
+            how the internet really works, and the distinction between a website and a webpage. 
+            Each concept felt like a key unlocking the doors to a new realm of possibilities. 
+            I could feel my excitement building with every line I <b><em>read</em></b>.
+        </p>
+        <p> <b><em>It wasn’t just about learning the basics</em></b>—it was about the thrill of stepping 
+            into a world I had always dreamed of. With every click, 
+            I was laying the groundwork for something bigger, 
+            something more meaningful. <strong><i>This wasn’t just a course</i></strong>; it was the beginning of a 
+            transformative journey. I felt an overwhelming sense of pride—I had finally taken the 
+            first step into web and software development, a passion I had long <b><em>neglected</em></b>. 
+            The road ahead felt unknown, yet thrilling, and I couldn’t wait to see where this adventure 
+            would lead me.
+        </p>
+        <li> <b> Sept 4th, 2024 </b> </li>
+        <p> <strong><i>Today was a breakthrough</i></strong>—I successfully installed a virtual machine on my laptop! 
+            But that wasn’t all. I went ahead and installed a Linux system on it as well. 
+            The moment it booted up, <b><em>I couldn’t help but feel a surge of excitement</em></b> . 
+            I was about to use an entirely different operating system, all while keeping my Windows setup 
+            intact! It felt like I had unlocked a whole new dimension on my machine, 
+            a playground for exploration and learning.
+        </p>
+    
+        <p> The idea of seamlessly switching between two operating systems felt empowering. 
+            It was as if I had expanded the capabilities of my laptop and, more importantly, 
+            my own potential as a developer. I couldn’t wait to dive into Linux, tinker with its features, 
+            and see how it would enhance my understanding of tech. Today wasn’t just about installing 
+            software—it was about opening up new horizons in my journey. 
+            And I could feel the excitement bubbling up for all the discoveries yet to come!
+        </p>
+        <li> <b> Sept 5th, 2024 </b> </li>
+        <p> I dove into the basics of Git and GitHub! Setting up my GitHub profile felt like 
+            I was officially stepping into the world of developers, and connecting it to Git through the Linux 
+            terminal? That felt like magic. The thrill of watching the terminal respond to my commands, 
+            like creating directories, renaming files, and moving them from one folder to another—
+            it all felt so empowering. Every line I typed was a step closer to mastering the tools 
+            professionals use every day.
+        </p>
+        <p> And it didn’t stop there. I also installed VSCode, my new coding playground, 
+            and learned the fundamentals of HTML. 
+            Creating files and coding in VSCode made everything feel so real. 
+            When I first encountered the concept of a boilerplate, it was like unlocking a secret formula, 
+            and breaking down each part gave me a sense of control over my code. 
+            The excitement of learning HTML tags—paragraphs, headings, italics, bold, and strong—
+            was like discovering the building blocks of the web itself.
+        </p>    
+        <p> Right now, I’m using everything I’ve learned to write this very diary, and I can’t help but smile. 
+            The fact that just a few hours ago, these skills were foreign to me, and now I’m putting them to use
+            , feels surreal. This is only the beginning, and I can’t wait to see where this newfound 
+            knowledge will take me next!
+        </p>
+        <li> <b> Sept 6th, 2024 </b> </li>
+        <p> Today, I unlocked another exciting skill—I learned how to create both ordered and unordered 
+            lists in HTML! What seemed like a simple concept at first quickly became a powerful tool 
+            for organizing content. It felt incredibly satisfying to see my lists take shape, structured and neat, 
+            right before my eyes.
+        </p>
 
-    <p> The idea of seamlessly switching between two operating systems felt empowering. 
-        It was as if I had expanded the capabilities of my laptop and, more importantly, 
-        my own potential as a developer. I couldn’t wait to dive into Linux, tinker with its features, 
-        and see how it would enhance my understanding of tech. Today wasn’t just about installing 
-        software—it was about opening up new horizons in my journey. 
-        And I could feel the excitement bubbling up for all the discoveries yet to come!
-    </p>
-    <h2>Entry #5: Sept 5th, 2024</h2>
-    <p> I dove into the basics of Git and GitHub! Setting up my GitHub profile felt like 
-        I was officially stepping into the world of developers, and connecting it to Git through the Linux 
-        terminal? That felt like magic. The thrill of watching the terminal respond to my commands, 
-        like creating directories, renaming files, and moving them from one folder to another—
-        it all felt so empowering. Every line I typed was a step closer to mastering the tools 
-        professionals use every day.
-    </p>
-    <p> And it didn’t stop there. I also installed VSCode, my new coding playground, 
-        and learned the fundamentals of HTML. 
-        Creating files and coding in VSCode made everything feel so real. 
-        When I first encountered the concept of a boilerplate, it was like unlocking a secret formula, 
-        and breaking down each part gave me a sense of control over my code. 
-        The excitement of learning HTML tags—paragraphs, headings, italics, bold, and strong—
-        was like discovering the building blocks of the web itself.
-    </p>    
-    <p> Right now, I’m using everything I’ve learned to write this very diary, and I can’t help but smile. 
-        The fact that just a few hours ago, these skills were foreign to me, and now I’m putting them to use
-        , feels surreal. This is only the beginning, and I can’t wait to see where this newfound 
-        knowledge will take me next!
-    </p>
+        <p> But the best part? I’ve already put my newfound knowledge to use in this very journal! Now, each 
+            thought, task, or idea can be neatly arranged and presented in a way that’s both clean and 
+            visually appealing. It’s amazing how something as small as mastering lists can make such a big 
+            difference, and it’s made me even more excited about the endless possibilities of what I can create 
+            as I keep learning!
+        </p>
+    </ol>
+ 
 </body>
 </html>
